Network-Policies/allow-currencyapp.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-currency
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: currencyapp
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
  policyTypes:
  - Ingress
