Network-Policies/allow-fnd.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - {}  # Allow all external traffic (e.g., from Ingress or LoadBalancer)
  policyTypes:
  - Ingress
