Network-Policies/allow-recommendationapp.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-recommendationapp
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: recommendationapp
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
  policyTypes:
  - Ingress
